--- a/Elevatorpitch.html
+++ b/Elevatorpitch.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Elevatorpitch</title>
+    <link rel="stylesheet" href="./assets/css/elevatorpitch.css">
 </head>
 <body>
-   <embed src="https://media.giphy.com/media/fUYp0iOzQfC540KCs4/giphy.gif" type="">
+   <div id="center">
+    <embed src="./assets/Elevator pitch.mp4" type="" width="" id="vid">
+   </div>
 </body>
 </html>
