--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!--
     - favicon
   -->
-  <link rel="shortcut icon" href="./assets/images/logo.ico" type="image/x-icon">
+  <!-- <link rel="shortcut icon" href="./assets/images/logo.ico" type="image/x-icon"> -->
 
   <!--
     - custom css link
@@ -332,6 +332,23 @@ society
 
             <p class="service-item-text">
              <a href="./Elevatorpitch.html" target="_blank">  <button class="submit">My Elevator Pitch </button> </a>
+            
+            </p>
+          </div>
+
+        </li>
+        <br>
+        <li class="service-item">
+
+          <div class="service-icon-box">
+            <img src="./assets/images/icon-quote.svg" alt="Web development icon" width="40">
+          </div>
+
+          <div class="service-content-box">
+            <h4 class="h4 service-item-title">Some Fun</h4>
+
+            <p class="service-item-text">
+             <a href="http://www.staggeringbeauty.com/" target="_blank">  <button class="submit">Some Fun </button> </a>
             
             </p>
           </div>
